fix logo, logout, getting all coversations data

--- a/src/screens/home-page/_home-page.sass
+++ b/src/screens/home-page/_home-page.sass
@@ -15,7 +15,7 @@
   justify-content: space-between
 
 .home-item
-  box-shadow: 0 3px 40px rgba(23, 24, 32, 0.2)
+  box-shadow: 0 3px 40px rgba(14, 14, 19, 0.2)
 
 .home-trending-wrap
   overflow: hidden!important
